--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>Hellow World!</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Sample Website</title>
+  </head>
+  <body>
+    <p>Hellow World!</p>    
+  </body>
+</html>
