Add Moby Dick page and a menu

--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
   </head>
   <body>
 
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
+    </div>
+
     <h1>Important HTML tags</h1>
 
     <a href="https://www.flickr.com/photos/jdhancock/3814523970" target="_blank" rel="noopener"><img src="images/storm_trooper.jpg" alt="Tagged Storm Trooper"></a>
@@ -60,6 +66,52 @@
         <td>table data</td>
         <td>include a table data cell</td>
       </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header element</td>
+        <td>represents introductory content</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>content division</td>
+        <td>generic container for flow content.</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>unordered <br>list</td>
+        <td>unnumbered list tag</td>
+        <td>
+          <code>&lt;ul&gt;
+            <br>&lt;li&gt;fuits&lt;/li&gt;
+            <br>&lt;li&gt;veggies&lt;/li&gt;
+            <br>&lt;/ul&gt;
+          </code>
+        </td>
+        <td>
+          <ul>
+            <li>fuits</li>
+            <li>veggies</li>
+          </ul>
+        </td>
+      </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>ordered <br>list</td>
+        <td>numbered list tag</td>
+        <td>
+          <code>&lt;ol&gt;
+            <br>&lt;li&gt;cookies&lt;/li&gt;
+            <br>&lt;li&gt;cream&lt;/li&gt;
+            <br>&lt;/ol&gt;
+          </code>
+        </td>
+        <td>
+          <ol>
+            <li>cookies</li>
+            <li>cream</li>
+          </ol>
+        </td>
+      </tr>
     </table>
 
     <h2>Inline Elements</h2>
@@ -109,6 +161,35 @@
           </code>
         </td>
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span element</td>
+        <td>generic inline container</td>
+        <td>
+          <code>
+            &lt;span&gt;Call me Ishmael&lt;/span&gt;
+          </code>
+        </td>
+        <td><span>Call me Ishmael</span></td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list</td>
+        <td>list element</td>
+        <td>
+          <code>&lt;ul&gt;
+            <br>&lt;li&gt;warmth&lt;/li&gt;
+            <br>&lt;li&gt;shelther&lt;/li&gt;
+            <br>&lt;/ul&gt;
+          </code>
+        </td>
+        <td>
+          <ul>
+            <li>warmth</li>
+            <li>shelter</li>
+          </ul>
+        </td>
       </tr>
     </table>
 
