--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Learn Enought To Be Dangerous</title>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div>
+    <div id="main-nav" class="nav-menu">
       <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html" class="nav-spacing">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -31,6 +32,21 @@
     </p>
 
     <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="images/kitten.jpg" alt="An adorable kitten"></a>
+
+    <h2>Quotations</h2>
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #f4effc;">
+      <p>
+        <em>Don't believe every quote you read on the Internet.</em>
+        <br>
+        —Abraham Lincoln
+      </p>
+    </blockquote>
+
     <h2>Background</h2>
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the
