--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Moby Dick</title>
-  </head>
-  <body>
-
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
-    </div>
+  <<link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <div id="main-nav" class="nav-menu">
+    <a href="index.html">Home</a>
+    <a href="tags.html" class="nav-spacing">HTML Tags</a>
+    <a href="moby_dick.html" class="nav-spacing">Moby Dick</a>
+  </div>
 
     <header style="text-align: center; margin: 0 0 80px;">
       <h1>A Softcover Book Report</h1>
@@ -35,7 +35,8 @@
       <img src="images/sperm_whales.jpg" alt="Sperm Whales" style="display: block; margin: 0 auto;">
     </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px;
+    background-color: #fafafa;">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
